Fix references to non-existent function and variable

All unchecked code will contain errors and apparently, due to quirks of
VC++ template compilation, emulated by clang-cl, the ThreadSpecific<T>
destructor was never *really* compiled. It referenced two functions and
one variable and only one of these three things actually existed. This
was reported by Microsoft who use chromium as a compiler torture test.

Bug: 825352
Change-Id: I5dd1868acda760ef33dde518d72e3d7694fad9a8
Reviewed-on: https://chromium-review.googlesource.com/978849
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546720}
Former-commit-id: db526e73638b6815327ab97eabda50e03bd1f148